# desktop-trade-window

./: README.md  index.html  package-lock.json  package.json
.cursor/skills/bump-project-version/: SKILL.md
.cursor/skills/bump-project-version/scripts/: bump-version.mjs
.github/workflows/: release.yml
src/: chart.ts  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  models.rs
src-tauri/src/providers/: mod.rs  tencent.rs  yahoo.rs
