[package]
name = "stock-widget"
version = "0.1.1"
description = "US stock intraday K-line desktop widget"
authors = ["you"]
edition = "2021"

[lib]
name = "stock_widget_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "image-ico"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
encoding_rs = "0.8"
async-trait = "0.1"
